--- a/sandbox/project/technology6.html
+++ b/sandbox/project/technology6.html
@@ -38,95 +38,50 @@
     </div>
 
     <section>
-        <h2>As Laptops Evolve, Education Transforms</h2>
+        <h2>Chess robot breaks seven-year-old boy's finger during Moscow Open</h2>
         <hr>
         <hr>
         <div class="article">
-            At Lilla G. Frederick Pilot Middle School (LGF), students don’t just diagram a sentence. They film a
-            sentence.
+            A robot broke a seven-year-old boy's finger during a chess match in Moscow last week, Russian news outlets
+            report.
 
-            English students at LGF were instructed to think up a sentence with a prepositional phrase—“Jimmy jumped on
-            a table”—and then create a short video of the sentence, which their classmates viewed on their laptops. “You
-            never saw so much laughter and giggles,” says principal Deb Socia. “And I guarantee none of those students
-            will ever forget what a preposition is.”
+            "The robot broke the child's finger," Sergey Lazarev, Moscow Chess Federation President, told Tass news
+            agency. "This is of course bad."<br><br>
 
-            LGF has become the showcase for the growing belief that laptop computers, properly integrated into
-            classrooms, can have a profound effect on how students learn and act. The inner-city middle school is
-            located in a gang-ridden area in the Dorchester neighborhood of Boston. Thirty percent of the 670 students
-            have special needs, and nine in 10 are considered low income.
+            A video shared on social media shows the robot taking one of the boy's pieces. The boy then makes his own
+            move, and the robot grabs his finger.
 
-            In 2007, a program was initiated to give each student a laptop and integrate the technology into instruction
-            in a meaningful way. At any given time, about one-third of the classrooms are engaged in some
-            technology-related activities. Students blog immediately when they come into class to settle in. They’ve
-            written and recorded their own protest songs on their laptops while studying the First Amendment.
-            <br><img src="obrazky/surface.jpg" alt="" class="image">
-            <br>
-            <h3>Stronger Connections</h3>
-            <br>
-            While laptops may have started as a business tool,
-            their role in education is only now being fully
-            explored—both in Third World countries with limited access to formal education and Westernized education
-            systems. They are being used to support overburdened school districts with limited teaching resources;
-            enhance critical thinking and academic success; and strengthen student and parental participation in the
-            learning process.
+            Four adults rush to help the boy, who is eventually freed and ushered away.
 
-            A recent study in the Journal of Technology, Learning, and Assessment found students in one-to-one computer
-            settings like LGF outperformed peers in traditional classrooms. In a single year, 20 percent of LGF students
-            increased their reading skills by two grade levels. The number of students referred to LGF’s principal or
-            other intervention specialists for disciplinary reasons has dropped from 500 to 100 in two years. Prior to a
-            flu outbreak, Socia says attendance levels had increased.
+            Mr Lazarev said the machine had played many previous matches without incident.
 
-            LGF is championing the notion that laptops have their greatest impact in the classroom by engaging students,
-            teachers and parents in creative, new ways. “People assume that if students are using individual laptops
-            they can’t be collaborating,” Socia says. “But if they are blogging, we use a LCD projector to show the
-            blogs on the board so the students can comment on each other’s work. The students can e-mail their writing
-            to a classmate for peer-to-peer editing in ten seconds.”
-
-            This dovetails with studies that indicate laptops shift instruction from lectures to individual and group
-            projects. At LGF, teachers use the technology to differentiate their instruction based on the special needs
-            or learning levels of a student. A crucial aspect for LGF is the inclusion of parents, many of whom have
-            never touched a computer before. Hundreds of families have joined the Technology Goes Home program, where
-            they are provided with training and a netbook to use at home.
-
-            “The parents take the computer home and the child becomes the teacher,” Socia says. “They sit together and
-            it improves the relationship. It’s a win-win situation.” Parents now hop online and check their children’s
-            homework assignments and grades.
+            The boy was able to finish the final days of the tournament in a cast, Tass reports.
             <br>
             <br>
-            <h3>Taking College by Storm</h3>
-            <br>
-            In a study recently published in Computers in Education Journal, 78 percent of students agreed the laptops
-            made them more engaged and about half said they were more attentive as a result of the technology. About
-            seven in 10 students said the laptops had a positive effect on their learning.
+
 
             Case in point: Perry Samson, Ph.D., a meteorologist and professor at the University of Michigan, teaches a
             lecture class in Extreme Weather. He explains how tornados form and why climate change may result in more
             intense hurricanes. Now he’s shaking up education with a robust interactive response system called
             LectureTools, which makes use of the laptops his students carry into his lecture hall.
-            <br>
-            <br>
-            During class, students can view Professor Samson’s PowerPoint slides on their laptops and take notes
-            directly on the slides. Using a chat window, the students can anonymously ask the teacher’s aide questions
-            during the lecture. Professor Samson can see the questions, too, providing him with valuable insight into
-            the student’s comprehension of his lecture without disrupting the flow of the class. Students can also rate
-            their understanding of the slides, giving him more immediate feedback.
 
-            “It’s sobering,” Professor Samson says. “I always thought I was God’s gift to lecturing; now I realize how
-            confused the students were before they could ask questions.”
-
-            After laughing, he continues: “The students can ask what they think is a dumb question without fear. In the
-            30 years I’ve taught, there are usually only five or six students in a 300-student lecture class who had the
-            chutzpah to raise their hand and ask a question. Now, with this system, two-thirds of the students are
-            asking questions.”
-
-            During class, students can use their laptops to answer multiple-choice questions and image-based questions,
-            such as locating weather patterns on a map. “By how they answer questions, I can see which students are in
-            trouble before the first exam and which require more attention,” Professor Samson says.
-
-            Skeptics have been concerned that students will use laptops for too much play and not enough work. But
-            Professor Samson says he’s proven otherwise. “The key is to engage students through their laptops, so they
-            don’t drift off to social networking sites. And we’ve shown you can do that.”
             <br><br>
+            But they haven’t adequately managed to predict how proteins fold from scratch. Before deep learning came
+            along, the protein-folding problem seemed impossibly hard, and it seemed poised to frustrate computational
+            chemists for many decades to come. AlphaZero didn’t learn anything from humans or chess games played by
+            humans. It taught itself and, in the process, derived strategies never seen before. In a commentary in
+            Science magazine, former world chess champion Garry Kasparov wrote that by learning from playing itself,
+            AlphaZero developed strategies that “reflect the truth” of chess rather than reflecting “the priorities and
+            prejudices” of the programmers. “It’s the embodiment of the cliché ‘work smarter, not harder.’” In the
+            competition, teams are given the linear sequence of amino acids for about 100 proteins for which the 3D
+            shape is known but hasn’t yet been published; they then have to compute how these sequences would fold. In
+            2018 AlphaFold, the deep-learning rookie at the competition, beat all the traditional programs – but
+            barely.<br>
+            As with the chess and Go programs – AlphaZero and AlphaGo – we don’t exactly know what the AlphaFold2
+            algorithm is doing and why it uses certain correlations, but we do know that it works.
+
+            Besides helping us predict the structures of important proteins, understanding AlphaFold’s “thinking” will
+            also help us gain new insights into the mechanism of protein folding.
 
         </div>
     </section>
