--- a/sandbox/project/technology7.html
+++ b/sandbox/project/technology7.html
@@ -38,14 +38,14 @@
     </div>
 
     <section>
-        <h2>Samsung Galaxy Buds 2 PRO</h2>
+        <h2>Nothing Phone 1 review</h2>
         <hr>
         <hr>
         <div class="article">
-            It's no secret: Samsung is holding a Galaxy Unpacked event on August 10 – aka the big stage the tech giant
-            traditionally likes to tread when revealing its latest devices and wearables. And as it happens, we know
-            officially that new Galaxy Buds are coming, because Samsung has actually invited customers to "reserve the
-            next Galaxy Galaxy smartphone, watch and buds" on its site.
+            So, you recently got the Nothing phone (1) and are done admiring the brilliant design of the phone. You’re
+            ready to make the most off the smartphone and enable all of its best features. However, if you’re coming
+            from an older iOS device or a heavy skin like Xiaomi’s MIUI, you may find the stock-like interface of
+            NothingOS a bit confusing to get around.
 
             The inner-city middle school is
             located in a gang-ridden area in the Dorchester neighborhood of Boston. Thirty percent of the 670 students
@@ -57,7 +57,7 @@
             in a meaningful way. At any given time, about one-third of the classrooms are engaged in some
             technology-related activities. Students blog immediately when they come into class to settle in. They’ve
             written and recorded their own protest songs on their laptops while studying the First Amendment.
-            <br><img src="obrazky/buds.jpg" alt="" class="image">
+            <br><img src="obrazky/nothing.jpg" alt="" class="image">
             <br>
             <h3>New technology</h3>
             <br>
