--- a/sandbox/project/section-hub-tech.html
+++ b/sandbox/project/section-hub-tech.html
@@ -82,24 +82,27 @@
 
             <div class="grid-container">
                 <div class="grid-item">
-                    <h3>An extreme form of encryption could solve big data's privacy problem</h3>
-                    <p class="featured-body-text">ully homomorphic encryption allows us to run analysis on data without
+                    <h3>An extreme form of encryption could...</h3>
+                    <p class="featured-body-text">Fully homomorphic encryption allows us to run analysis on data without
                         ever seeing the contents. It could
-                        help us reap the full ... || <a href="technology2.html">continue reading ></a></p>
+                        help us reap the full benefits of big data, from fighting financial fraud to catching
+                        diseases... || <a href="technology2.html">continue reading ></a></p>
                 </div>
                 <div class="grid-item">
-                    <h3>Article 2</h3>
-                    <p class="featured-body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et
-                        sodales
-                        quam. Duis suscipit a nibh quis
-                        elementum. Aliquam lobortis dignissim... || <a href="error404.html">continue reading ></a></p>
+                    <h3>An extreme Apple Watch</h3>
+                    <p class="featured-body-text"> Aimed at athletes, hikers, and others who experience more extreme
+                        conditions when wearing their Apple
+                        Watches, the new device will be Apple's biggest to date. The display will measure in... || <a
+                            href="error404.html">continue reading ></a></p>
                 </div>
                 <div class="grid-item">
-                    <h3>Article 3</h3>
-                    <p class="featured-body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et
-                        sodales
-                        quam. Duis suscipit a nibh quis
-                        elementum. Aliquam lobortis dignissim... || <a href="error404.html">continue reading ></a></p>
+                    <h3>Boaty McBoatface’s new mission is more...</h3>
+                    <p class="featured-body-text">The submersible is accompanied by other underwater robots as it heads
+                        off into the cold, dark underbelly of
+                        the Thwaites Glacier.
+
+                        Boaty McBoatface, the comically named autonomous submarine courtesy... || <a
+                            href="error404.html">continue reading ></a></p>
                 </div>
                 <div class="grid-item">
                     <h3>Article 4</h3>
@@ -137,6 +140,55 @@
                         elementum. Aliquam lobortis dignissim... || <a href="error404.html">continue reading ></a></p>
                 </div>
             </div>
+
+            <table>
+                <tr>
+                    <td>
+                        <div class="table-spacing-2">
+                            <h3>An extreme form of encryption could...</h3>
+                            <p class="featured-body-text">Fully homomorphic encryption allows us to run analysis on data
+                                without
+                                ever seeing the contents. It could
+                                help us reap the full benefits of big data, from fighting financial fraud to catching
+                                diseases... || <a href="technology2.html">continue reading ></a></p>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="table-spacing-3">
+                            <h3>An extreme Apple Watch</h3>
+                            <p class="featured-body-text"> Aimed at athletes, hikers, and others who experience more
+                                extreme
+                                conditions when wearing their Apple
+                                Watches, the new device will be Apple's biggest to date. The display will measure in...
+                                ||
+                                <a href="technology3.html">continue reading ></a>
+                            </p>
+                        </div>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <div class="table-spacing-2">
+                            <h3>Boaty McBoatface’s new mission is more...</h3>
+                            <p class="featured-body-text">The submersible is accompanied by other underwater robots as
+                                it
+                                heads
+                                off into the cold, dark underbelly of
+                                the Thwaites Glacier.
+
+                                Boaty McBoatface, the comically named autonomous submarine courtesy... || <a
+                                    href="technology4.html">continue reading ></a></p>
+                        </div>
+                    </td>
+                    <td>
+                        <div class="table-spacing-3"><input type="checkbox" id="javascript" name="intrests"
+                                value="JavaScript">
+                            <label for="javascript">Art</label>
+                        </div>
+                    </td>
+                </tr>
+            </table>
+
             <br>
 
     </section>
