--- a/sandbox/project/technology2.html
+++ b/sandbox/project/technology2.html
@@ -43,7 +43,8 @@
         <hr>
         <div class="article">
             Fully homomorphic encryption allows us to run analysis on data without ever seeing the contents. It could
-            help us reap the full benefits of big data, from fighting financial fraud to catching diseases early LIKE any
+            help us reap the full benefits of big data, from fighting financial fraud to catching diseases early. Like
+            any
             doctor, Jacques Fellay wants to give his patients the best care possible. But his instrument of choice is no
             scalpel or stethoscope, it is far more powerful than that.
             which their classmates viewed on their laptops. “You
