--- a/sandbox/project/technology3.html
+++ b/sandbox/project/technology3.html
@@ -38,7 +38,7 @@
     </div>
 
     <section>
-        <h2>An extreme form of encryption could solve big data's privacy problem</h2>
+        <h2>An extreme Apple Watch</h2>
         <hr>
         <hr>
         <div class="article">
