--- a/sandbox/project/section-hub-tech.html
+++ b/sandbox/project/section-hub-tech.html
@@ -80,114 +80,129 @@
             <hr>
             <hr>
 
-            <div class="grid-container">
-                <div class="grid-item">
-                    <h3>An extreme form of encryption could...</h3>
-                    <p class="featured-body-text">Fully homomorphic encryption allows us to run analysis on data without
-                        ever seeing the contents. It could
-                        help us reap the full benefits of big data, from fighting financial fraud to catching
-                        diseases... || <a href="technology2.html">continue reading ></a></p>
-                </div>
-                <div class="grid-item">
-                    <h3>An extreme Apple Watch</h3>
-                    <p class="featured-body-text"> Aimed at athletes, hikers, and others who experience more extreme
-                        conditions when wearing their Apple
-                        Watches, the new device will be Apple's biggest to date. The display will measure in... || <a
-                            href="error404.html">continue reading ></a></p>
-                </div>
-                <div class="grid-item">
-                    <h3>Boaty McBoatface’s new mission is more...</h3>
-                    <p class="featured-body-text">The submersible is accompanied by other underwater robots as it heads
-                        off into the cold, dark underbelly of
-                        the Thwaites Glacier.
 
-                        Boaty McBoatface, the comically named autonomous submarine courtesy... || <a
-                            href="error404.html">continue reading ></a></p>
-                </div>
-                <div class="grid-item">
-                    <h3>Article 4</h3>
-                    <p class="featured-body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et
-                        sodales
-                        quam. Duis suscipit a nibh quis
-                        elementum. Aliquam lobortis dignissim... || <a href="error404.html">continue reading ></a></p>
-                </div>
-                <div class="grid-item">
-                    <h3>Article 5</h3>
-                    <p class="featured-body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et
-                        sodales
-                        quam. Duis suscipit a nibh quis
-                        elementum. Aliquam lobortis dignissim... || <a href="error404.html">continue reading ></a></p>
-                </div>
-                <div class="grid-item">
-                    <h3>Article 6</h3>
-                    <p class="featured-body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et
-                        sodales
-                        quam. Duis suscipit a nibh quis
-                        elementum. Aliquam lobortis dignissim... || <a href="error404.html">continue reading ></a></p>
-                </div>
-                <div class="grid-item">
-                    <h3>Article 7</h3>
-                    <p class="featured-body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et
-                        sodales
-                        quam. Duis suscipit a nibh quis
-                        elementum. Aliquam lobortis dignissim... || <a href="error404.html">continue reading ></a></p>
-                </div>
-                <div class="grid-item">
-                    <h3>Article 8</h3>
-                    <p class="featured-body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et
-                        sodales
-                        quam. Duis suscipit a nibh quis
-                        elementum. Aliquam lobortis dignissim... || <a href="error404.html">continue reading ></a></p>
-                </div>
+
+            <div class="tech-hub-table-margin">
+                <table>
+                    <tr>
+                        <td>
+                            <div class="table-spacing-2">
+                                <h3>An extreme form of encryption could...</h3>
+                                <p class="featured-body-text">Fully homomorphic encryption allows us to run analysis on
+                                    data
+                                    without
+                                    ever seeing the contents. It could
+                                    help us reap the full benefits of big data, from fighting financial fraud to
+                                    catching
+                                    diseases... || <a href="technology2.html">continue reading ></a></p>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="table-spacing-3">
+                                <h3>An extreme Apple Watch</h3>
+                                <p class="featured-body-text"> Aimed at athletes, hikers, and others who experience more
+                                    extreme
+                                    conditions when wearing their Apple
+                                    Watches, the new device will be Apple's biggest to date. The display will measure
+                                    in...
+                                    ||
+                                    <a href="technology3.html">continue reading ></a>
+                                </p>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="table-spacing-2">
+                                <h3>Boaty McBoatface’s new mission is more...</h3>
+                                <p class="featured-body-text">The submersible is accompanied by other underwater robots
+                                    as
+                                    it
+                                    heads
+                                    off into the cold, dark underbelly of
+                                    the Thwaites Glacier.
+
+                                    Boaty McBoatface, the comically named autonomous submarine courtesy... || <a
+                                        href="technology4.html">continue reading ></a></p>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="table-spacing-3">
+                                <h3>Boaty McBoatface’s new mission is more...</h3>
+                                <p class="featured-body-text">The submersible is accompanied by other underwater robots
+                                    as
+                                    it
+                                    heads
+                                    off into the cold, dark underbelly of
+                                    the Thwaites Glacier.
+
+                                    Boaty McBoatface, the comically named autonomous submarine courtesy... || <a
+                                        href="technology4.html">continue reading ></a></p>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="table-spacing-2">
+                                <h3>Boaty McBoatface’s new mission is more...</h3>
+                                <p class="featured-body-text">The submersible is accompanied by other underwater robots
+                                    as
+                                    it
+                                    heads
+                                    off into the cold, dark underbelly of
+                                    the Thwaites Glacier.
+
+                                    Boaty McBoatface, the comically named autonomous submarine courtesy... || <a
+                                        href="technology4.html">continue reading ></a></p>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="table-spacing-3">
+                                <h3>Boaty McBoatface’s new mission is more...</h3>
+                                <p class="featured-body-text">The submersible is accompanied by other underwater robots
+                                    as
+                                    it
+                                    heads
+                                    off into the cold, dark underbelly of
+                                    the Thwaites Glacier.
+
+                                    Boaty McBoatface, the comically named autonomous submarine courtesy... || <a
+                                        href="technology4.html">continue reading ></a></p>
+                            </div>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="table-spacing-2">
+                                <h3>Boaty McBoatface’s new mission is more...</h3>
+                                <p class="featured-body-text">The submersible is accompanied by other underwater robots
+                                    as
+                                    it
+                                    heads
+                                    off into the cold, dark underbelly of
+                                    the Thwaites Glacier.
+
+                                    Boaty McBoatface, the comically named autonomous submarine courtesy... || <a
+                                        href="technology4.html">continue reading ></a></p>
+                            </div>
+                        </td>
+                        <td>
+                            <div class="table-spacing-3">
+                                <h3>Boaty McBoatface’s new mission is more...</h3>
+                                <p class="featured-body-text">The submersible is accompanied by other underwater robots
+                                    as
+                                    it
+                                    heads
+                                    off into the cold, dark underbelly of
+                                    the Thwaites Glacier.
+
+                                    Boaty McBoatface, the comically named autonomous submarine courtesy... || <a
+                                        href="technology4.html">continue reading ></a></p>
+                            </div>
+                        </td>
+                    </tr>
+                </table>
             </div>
-
-            <table>
-                <tr>
-                    <td>
-                        <div class="table-spacing-2">
-                            <h3>An extreme form of encryption could...</h3>
-                            <p class="featured-body-text">Fully homomorphic encryption allows us to run analysis on data
-                                without
-                                ever seeing the contents. It could
-                                help us reap the full benefits of big data, from fighting financial fraud to catching
-                                diseases... || <a href="technology2.html">continue reading ></a></p>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="table-spacing-3">
-                            <h3>An extreme Apple Watch</h3>
-                            <p class="featured-body-text"> Aimed at athletes, hikers, and others who experience more
-                                extreme
-                                conditions when wearing their Apple
-                                Watches, the new device will be Apple's biggest to date. The display will measure in...
-                                ||
-                                <a href="technology3.html">continue reading ></a>
-                            </p>
-                        </div>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <div class="table-spacing-2">
-                            <h3>Boaty McBoatface’s new mission is more...</h3>
-                            <p class="featured-body-text">The submersible is accompanied by other underwater robots as
-                                it
-                                heads
-                                off into the cold, dark underbelly of
-                                the Thwaites Glacier.
-
-                                Boaty McBoatface, the comically named autonomous submarine courtesy... || <a
-                                    href="technology4.html">continue reading ></a></p>
-                        </div>
-                    </td>
-                    <td>
-                        <div class="table-spacing-3"><input type="checkbox" id="javascript" name="intrests"
-                                value="JavaScript">
-                            <label for="javascript">Art</label>
-                        </div>
-                    </td>
-                </tr>
-            </table>
 
             <br>
 
