--- a/sandbox/project/main-page.html
+++ b/sandbox/project/main-page.html
@@ -45,21 +45,20 @@
         <hr>
         <br>
         <div class="featured">
-            <h3>Article 1</h3>
-            <p class="featured-body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et sodales
-                quam. Duis suscipit a nibh quis
-                elementum. Aliquam lobortis dignissim... || <a href="artikul1.html">continue reading ></a></p>
+            <h3>Panama Canal - Waterway between the Atlantic and the Pacific</h3>
+            <p class="featured-body-text">The Panama Canal is a waterway that connects the Atlantic and the Pacific
+                Ocean. Before the canal was opened in 1914 ships had to travel around the southern tip of South America
+                to get from the Atlantic to the Pacific Ocean... || <a href="artikul1.html">continue reading ></a></p>
             <br>
-            <h3>Article 2</h3>
-            <p class="featured-body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et sodales
-                quam. Duis suscipit a nibh quis
-                elementum. Aliquam lobortis dignissim... || <a href="artikul2.html">continue reading ></a></p>
+            <h3>Coffe is the new trend</h3>
+            <p class="featured-body-text">Coffee lovers around the world who reach for their favorite morning brew
+                probably aren’t thinking about its health benefits or risks. And yet this beverage has been subject to a
+                long history of debate... || <a href="artikul2.html">continue reading ></a></p>
             <br>
-            <h3>Article 3</h3>
-            <p class="featured-body-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec et
-                sodales
-                quam. Duis suscipit a nibh quis
-                elementum. Aliquam lobortis dignissim... || <a href="artikul3.html">continue reading ></a></p>
+            <h3>Good sleep for good health. Get the rest you need.</h3>
+            <p class="featured-body-text">Why do we need to sleep? People often think that sleep is just “down time,”
+                when a tired brain gets to rest, says Dr. Maiken Nedergaard, who studies sleep at the University of
+                Rochester. “But that’s wrong,” she says... || <a href="artikul3.html">continue reading ></a></p>
         </div>
 
 
