--- a/sandbox/project/main-page.html
+++ b/sandbox/project/main-page.html
@@ -128,7 +128,7 @@
                         <div class="grid-item"><a href="section-hub.html">science</a></div>
                         <div class="grid-item"><a href="section-hub.html">lifestyle</a></div>
                         <div class="grid-item"><a href="section-hub.html">politics</a></div>
-                        <div class="grid-item"><a href="section-hub.html">s</a></div>
+                        <div class="grid-item"><a href="section-hub.html">gastronomy</a></div>
                     </div>
                 </div>
                 <br>
