--- a/sandbox/project/formular.html
+++ b/sandbox/project/formular.html
@@ -35,6 +35,7 @@
         <a href="section-hub.html">Art</a>
         <a href="section-hub.html">Lifestyle</a>
         <a href="section-hub.html">Politics</a>
+        <a href="section-hub.html">Gastronomy</a>
         <a href="formular.html">Subscribe to our newsletter</a>
       </div>
     </div>
